# nokia-formation-project

./: Installation.md  README.md
.github/workflows/: main.yml  ros-ci.yml
nokia/: CMakeLists.txt  package.xml
nokia_formation/: CMakeLists.txt  package.xml
nokia_libraries/: CMakeLists.txt  package.xml
nokia_libraries/include/nokia_libraries/: AutoPilot.hpp  Graph.hpp
nokia_libraries/src/nokia_libraries/: AutoPilot.cpp  Graph.cpp
nokia_project/: CMakeLists.txt  package.xml
nokia_simulation/: CMakeLists.txt  package.xml
nokia_simulation/include/nokia_simulation/: AutoPilot.hpp  Graph.hpp
nokia_simulation/launch/: multi_drone_sim.launch  single_drone_sim.launch
nokia_simulation/scripts/: target_sim.py
nokia_simulation/src/: circle.cpp  network.cpp  setpoint_test.cpp
nokia_simulation/src/nokia_simulation/: AutoPilot.cpp  Graph.cpp
