<?xml version="1.0"?>
<package format="2">
  <name>nokia</name>
  <version>0.0.0</version>
  <description>metapackage for the nokia project</description>

  <maintainer email="shobuj.paul@gmail.com">Shobuj Paul</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>nokia_formation</exec_depend>
  <exec_depend>nokia_simulation</exec_depend>
  <exec_depend>nokia_libraries</exec_depend>

  <export><metapackage/></export>
</package>